--- a/destination-kilimanjaro.html
+++ b/destination-kilimanjaro.html
@@ -40,7 +40,7 @@
             display: inline-block;
             width: 50px;
             height: 3px;
-            background-color: #78B438;
+            background-color: #4B2E18;
             margin-right: 15px;
             vertical-align: middle;
         }
@@ -58,7 +58,7 @@
         }
 
         .icon-box i {
-            color: #78B438;
+            color: #4B2E18;
             font-size: 40px;
             margin-bottom: 15px;
         }
@@ -131,7 +131,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo_kilimora.png" alt="Tembea Africa Logo" width="100%">
+                <img src="img/logo1.png" alt="Tembea Africa Logo" width="100%">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -153,7 +153,7 @@
                                             style="font-size: 2.5rem;">
                                             Destinations
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                                    <img src="img/logo_kilimora.png" alt="Kilimora Adventures" class="img-fluid"
+                                    <img src="img/kilimora5.jpg" alt="Kilimora Adventures" class="img-fluid"
                                         style="max-height: 250px; object-fit: contain;">
                                 </div>
                             </div>
@@ -209,7 +209,7 @@
                                             style="font-size: 2.5rem;">
                                             Safari Tours
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -264,7 +264,7 @@
                                             style="font-size: 2.5rem;">
                                             Experiences
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="row">
@@ -340,7 +340,7 @@
         </nav>
     </div>
     <div class="container-fluid bg-primary py-5 mb-5 hero-header"
-        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/kilimanjaro2.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
+        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/chui.jpg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
@@ -363,7 +363,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/kilimanjaro3.jpg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/chui-eat2.jpeg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -436,73 +436,115 @@
             <div class="owl-carousel testimonial-carousel">
                 <!-- Tour Item 1 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/kilimanjaro2.jpg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">3 Days Classic Serengeti Safari</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>3 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>2 Person</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/kilimanjaro2.jpg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>3 Days</span>
+                                <span class="tour-tag"><i class="fa fa-map-marker-alt text-primary me-2"></i>Wildlife
+                                    Safaris</span>
+                            </div>
                         </div>
-                        <p class="mb-2">Experience the highlights of Serengeti in a short but sweet safari.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">3 Days Classic Serengeti Safari</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Ngorongoro
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Tour Item 2 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/pro3.jpg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">4 Day Serengeti Safari Game Package</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>Family</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
+                                <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
+                            </div>
                         </div>
-                        <p class="mb-2">Perfect for families looking to explore the wild together.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">4 Day Serengeti Safari Package</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Manyara
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Tour Item 3 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/kilimanjaro3.jpg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">5 Days Great Migration Safari</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>5 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>Group</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/kilimanjaro3.jpg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>5 Days</span>
+                                <span class="tour-tag"><i class="fa fa-paw text-primary me-2"></i>Great Migration</span>
+                            </div>
                         </div>
-                        <p class="mb-2">Follow the herds and witness the dramatic river crossings.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">5 Days Great Migration Safari</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Mara Area
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <!-- Tour Item 4 -->
                 <div class="package-item">
-                    <div class="overflow-hidden dest-img-container">
-                        <img class="img-fluid" src="img/photo1.jpeg" alt="">
-                    </div>
-                    <div class="p-4">
-                        <h5 class="mb-0">10 Days Exclusive Serengeti Safari</h5>
-                        <div class="d-flex justify-content-between mb-3">
-                            <small class="m-0"><i class="fa fa-calendar-alt text-primary me-2"></i>10 Days</small>
-                            <small class="m-0"><i class="fa fa-user text-primary me-2"></i>Luxury</small>
+                    <div class="tour-card">
+                        <div class="position-relative">
+                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <div class="tour-tag-box">
+                                <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
+                                    Days</span>
+                                <span class="tour-tag"><i class="fa fa-gem text-primary me-2"></i>Luxury Safari</span>
+                            </div>
                         </div>
-                        <p class="mb-2">An immersive journey through the entire ecosystem in pure luxury.</p>
-                        <div class="d-flex justify-content-between align-items-center mt-2">
-                            <span class="text-primary fw-bold">Ring for Price</span>
-                            <a href="#" class="btn btn-sm btn-primary px-3 rounded-pill">Book Now</a>
+                        <div class="tour-content">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <h5 class="mb-3">10 Days Exclusive Serengeti Safari</h5>
+                            <p class="mb-4 text-uppercase fw-bold" style="font-size: 13px; color: #555;">
+                                <i class="fa fa-flag text-primary me-2"></i>Serengeti, Zanzibar
+                            </p>
+                            <div class="arrow-link">
+                                <a href="#">&rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -515,7 +557,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="img-fluid w-100" src="img/t4.jpg" alt="Great Migration">
+                    <img class="img-fluid w-100" src="img/Zebra-4.jpg" alt="Great Migration">
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h1 class="mb-4">Witness The Great Migration</h1>
@@ -600,7 +642,7 @@
             <!-- Tarangire Block -->
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
-                    <img src="img/tarangire.jpg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
+                    <img src="img/tembo11.jpeg" class="img-fluid rounded main-img" alt="Tarangire Elephants">
 
                 </div>
                 <div class="col-lg-6">
@@ -618,16 +660,18 @@
             <!-- Zanzibar Block -->
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
-                    <img src="img/beach.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
+                    <img src="img/zanzibar-island.jpg" class="img-fluid rounded main-img" alt="Zanzibar Beach">
 
                 </div>
                 <div class="col-lg-6">
                     <h3 class="dest-country">Zanzibar Island</h3>
                     <div class="dest-underline"></div>
                     <p class="dest-text">
-                        After the dust of the safari, wash it off in the crystal-clear waters of Zanzibar. Relax on
-                        pristine white sand beaches, explore the historic Stone Town, and indulge in the spices and
-                        culture of the Swahili Coast. The perfect bush-to-beach conclusion.
+                        After the thrill of the safari, unwind in the turquoise waters of Zanzibar. Lounge on pristine
+                        white-sand beaches, wander through the historic streets of Stone Town, and immerse yourself in
+                        the vibrant spices, culture, and traditions of the Swahili Coast. Kilimora Adventure offers the
+                        perfect bush-to-beach escape, combining the best of wildlife adventures with ultimate relaxation
+                        by the ocean..
                     </p>
                     <a href="#" class="dest-btn">â†’ EXPLORE ZANZIBAR</a>
                 </div>
@@ -699,7 +743,7 @@
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #4B2E18; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -870,7 +914,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#4B2E18; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
