--- a/exp-kilimanjaro.html
+++ b/exp-kilimanjaro.html
@@ -40,7 +40,7 @@
             display: inline-block;
             width: 50px;
             height: 3px;
-            background-color: #78B438;
+            background-color: #4B2E18;
             margin-right: 15px;
             vertical-align: middle;
         }
@@ -58,7 +58,7 @@
         }
 
         .icon-box i {
-            color: #78B438;
+            color: #4B2E18;
             font-size: 40px;
             margin-bottom: 15px;
         }
@@ -149,7 +149,7 @@
                                             style="font-size: 2.5rem;">
                                             Destinations
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -202,7 +202,7 @@
                                     <div class="d-flex align-items-center mb-3">
                                         <h2 class="mb-0 text-dark fw-bold position-relative d-inline-block" style="font-size: 2.5rem;">
                                             Safari Tours
-                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -240,7 +240,7 @@
                                     <div class="d-flex align-items-center mb-3">
                                         <h2 class="mb-0 text-dark fw-bold position-relative d-inline-block" style="font-size: 2.5rem;">
                                             Experiences
-                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="row">
@@ -634,7 +634,7 @@
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #4B2E18; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -805,7 +805,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#4B2E18; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
