--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                             style="font-size: 2.5rem;">
                                             Destinations
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -162,7 +162,7 @@
                                             style="font-size: 2.5rem;">
                                             Safari Tours
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -217,7 +217,7 @@
                                             style="font-size: 2.5rem;">
                                             Experiences
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="row">
@@ -1068,10 +1068,10 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
 
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#78B438 !important;">2026 Great
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">2026 Great
                     </h6>
 
-                    <h1 class="mb-4"><span style="color: #78B438 !important;">Migration Tours</span></h1>
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Migration Tours</span></h1>
 
                     <p class="mb-4">The Great Migration is the world’s most spectacular wildlife event — millions of
                         wildebeest and zebra crossing the Serengeti in search of fresh grazing, with predators close
@@ -1102,10 +1102,10 @@
 
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
 
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#78B438 !important;">About </h6>
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About </h6>
 
-                    <h1 class="mb-4"><span style="color: #78B438 !important;">About Kilimora Adventure</span></h1>
-                    <h6 class="mb-3" style="color: #78B438 !important; font-weight: bold;">Where Passion Meets the Wild
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">About Kilimora Adventure</span></h1>
+                    <h6 class="mb-3" style="color: #4B2E18 !important; font-weight: bold;">Where Passion Meets the Wild
                     </h6>
 
                     <p class="mb-4">Kilimora Adventure is an emerging premier tour operator based in the heart of
@@ -1849,7 +1849,7 @@
             <!-- Section Title -->
             <div class="mb-5">
                 <h2 class="fw-bold" style="font-size:42px;">
-                    <span style="border-left:5px solid #78B438; padding-left:15px;">Why Journey With Us?</span>
+                    <span style="border-left:5px solid #4B2E18; padding-left:15px;">Why Journey With Us?</span>
                 </h2>
                 <p style="font-size:18px; max-width:650px; color:#333;">
                     Since our inception, we have grown into one of Africa's premier safari operators by staying true to
@@ -2308,7 +2308,7 @@
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #4B2E18; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -2479,7 +2479,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#4B2E18; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
