--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                                             style="font-size: 2.5rem;">
                                             Destinations
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -162,7 +162,7 @@
                                             style="font-size: 2.5rem;">
                                             Safari Tours
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -217,7 +217,7 @@
                                             style="font-size: 2.5rem;">
                                             Experiences
                                             <span
-                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                                style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="row">
@@ -321,9 +321,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#78B438 !important;">About Us</h6>
-                    <h1 class="mb-4"><span style="color: #78B438 !important;">About Kilimora Adventure</span></h1>
-                    <h5 class="mb-3" style="color: #78B438;">Where Passion Meets the Wild</h5>
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About Us</h6>
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">About Kilimora Adventure</span></h1>
+                    <h5 class="mb-3" style="color: #4B2E18;">Where Passion Meets the Wild</h5>
 
                     <p class="mb-4">
                         Kilimora Adventure is an emerging premier tour operator based in the heart of Arusha, Tanzania.
@@ -339,7 +339,7 @@
                         guests with more than just a tour, but a life-changing journey.
                     </p>
 
-                    <h5 class="mb-3" style="color: #78B438;">Why Journey With Us?</h5>
+                    <h5 class="mb-3" style="color: #4B2E18;">Why Journey With Us?</h5>
                     <p class="mb-4">
                         Since our inception, we have grown into one of Africa's premier safari operators by staying true
                         to our core values:
@@ -354,14 +354,14 @@
                             create genuine connections with the rich culture and natural beauty of Tanzania.</li>
                     </ul>
 
-                    <h5 class="mb-3" style="color: #78B438;">Our Vision</h5>
+                    <h5 class="mb-3" style="color: #4B2E18;">Our Vision</h5>
                     <p class="mb-4">
                         To become Tanzania's most trusted and innovative tour guide company, delivering authentic,
                         sustainable, and unforgettable travel experiences that showcase the nation's natural beauty,
                         rich wildlife, and vibrant cultural heritage to the world.
                     </p>
 
-                    <h5 class="mb-3" style="color: #78B438;">Our Mission</h5>
+                    <h5 class="mb-3" style="color: #4B2E18;">Our Mission</h5>
                     <p class="mb-4">
                         Our mission is to create memorable and responsible travel experiences in Tanzania through expert
                         guiding, personalized service, and a deep respect for nature, culture, and local communities.
@@ -397,10 +397,10 @@
         <div class="container">
             <div class="mb-5">
                 <h2 class="fw-bold" style="font-size:42px;">
-                    <span style="border-left:5px solid #78B438; padding-left:15px; color: #78B438 ;">Our Core
+                    <span style="border-left:5px solid #D4A017; padding-left:15px; color: #4B2E18 ;">Our Core
                         Values</span>
                 </h2>
-                <p style="font-size:18px; max-width:650px; color:#78B438;">
+                <p style="font-size:18px; max-width:650px; color:#4B2E18;">
                     At Kilimora Adventure, our values shape every journey we create.
                 </p>
             </div>
@@ -408,7 +408,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-handshake fa-2x me-3" style="color: #78B438;"></i>
+                            <i class="fa fa-handshake fa-2x me-3" style="color: #D4A017;"></i>
                             <h5 class="fw-bold mb-0">Integrity & Trust</h5>
                         </div>
                         <p class="mb-0">
@@ -419,7 +419,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-star fa-2x me-3" style="color: #78B438;"></i>
+                            <i class="fa fa-star fa-2x me-3" style="color: #D4A017;"></i>
                             <h5 class="fw-bold mb-0">Excellence in Service</h5>
                         </div>
                         <p class="mb-0">
@@ -430,7 +430,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-leaf fa-2x me-3" style="color: #78B438;"></i>
+                            <i class="fa fa-leaf fa-2x me-3" style="color: #D4A017;"></i>
                             <h5 class="fw-bold mb-0">Sustainability & Conservation</h5>
                         </div>
                         <p class="mb-0">
@@ -441,7 +441,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-globe fa-2x me-3" style="color: #78B438;"></i>
+                            <i class="fa fa-globe fa-2x me-3" style="color: #D4A017;"></i>
                             <h5 class="fw-bold mb-0">Cultural Respect & Authenticity</h5>
                         </div>
                         <p class="mb-0">
@@ -452,7 +452,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-user-check fa-2x me-3" style="color: #78B438;"></i>
+                            <i class="fa fa-user-check fa-2x me-3" style="color: #D4A017;"></i>
                             <h5 class="fw-bold mb-0">Customer-Centered Approach</h5>
                         </div>
                         <p class="mb-0">
@@ -463,7 +463,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="card bg-white p-4 h-100 shadow-sm border-0">
                         <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-hands-helping fa-2x me-3" style="color: #78B438;"></i>
+                            <i class="fa fa-hands-helping fa-2x me-3" style="color: #D4A017;"></i>
                             <h5 class="fw-bold mb-0">Community Empowerment</h5>
                         </div>
                         <p class="mb-0">
@@ -481,9 +481,9 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#78B438 !important;">Our Objectives
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">Our Objectives
                     </h6>
-                    <h1 class="mb-4"><span style="color: #78B438 !important;">Driven by Excellence &
+                    <h1 class="mb-4"><span style="color: #4B2E18 !important;">Driven by Excellence &
                             Responsibility</span></h1>
                     <ul class="mb-4">
                         <li class="mb-3">Delivering safe, reliable, and expertly guided tours across Tanzania's most
@@ -521,7 +521,7 @@
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#78B438 !important;">Service
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">Service
                         Standards</h6>
                     <h1 class="mb-4">Our Commitment to Excellence</h1>
                     <p class="mb-4">At Kilimora Adventure, our service standards define our commitment to excellence,
@@ -575,12 +575,12 @@
                     </div>
                 </div>
                 <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.3s">
-                    <h6 class="section-title bg-white text-start pe-3" style="color:#78B438 !important;">Leadership Team
+                    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">Leadership Team
                     </h6>
-                    <h1 class="mb-4">Diana – Deputy Director <span style="color: #78B438;">| Kilimora Adventure</span>
+                    <h1 class="mb-4">Diana – Deputy Director <span style="color: #4B2E18;">| Kilimora Adventure</span>
                     </h1>
 
-                    <p class="lead mb-4" style="color: #78B438; font-weight: 600;">
+                    <p class="lead mb-4" style="color: #4B2E18; font-weight: 600;">
                         Serving as Deputy Director and co-founder of Kilimora Adventure, Diana Thomas plays a key role
                         in guiding the company's operations, reservations, and administrative functions.
                     </p>
@@ -593,7 +593,7 @@
                     <div class="row g-4 mb-4">
                         <div class="col-md-6">
                             <div class="d-flex align-items-center">
-                                <div class="btn-lg-square rounded-circle me-3" style="background-color: #78B438;">
+                                <div class="btn-lg-square rounded-circle me-3" style="background-color: #4B2E18;">
                                     <i class="fa fa-tasks text-white user-select-none"></i>
                                 </div>
                                 <div>
@@ -604,7 +604,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="d-flex align-items-center">
-                                <div class="btn-lg-square rounded-circle me-3" style="background-color: #78B438;">
+                                <div class="btn-lg-square rounded-circle me-3" style="background-color: #4B2E18;">
                                     <i class="fa fa-heart text-white user-select-none"></i>
                                 </div>
                                 <div>
@@ -630,14 +630,14 @@
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center px-3" style="color: #78B438 !important;">Our Fleet</h6>
+                <h6 class="section-title bg-white text-center px-3" style="color: #4B2E18 !important;">Our Fleet</h6>
                 <h1 class="mb-5">Our Vehicles Features</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-wrench fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-wrench fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Spare Tires & Heavy-Duty Jack</h5>
                             <p>We carry two spare tires and a heavy-duty jack, essential for the rough terrains.</p>
                         </div>
@@ -646,7 +646,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-snowflake fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-snowflake fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Cooler Box</h5>
                             <p>All our vehicles have a small fridge to keep beverages cold throughout the day.</p>
                         </div>
@@ -655,7 +655,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-arrows-alt-h fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-arrows-alt-h fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Extended and Wider</h5>
                             <p>Extended body for more space to move and get the best photographic angles.</p>
                         </div>
@@ -664,7 +664,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-book fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-book fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Wild Life Books and Maps</h5>
                             <p>A set of books and guides about mammals and birds, plus maps of the area.</p>
                         </div>
@@ -673,7 +673,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-bolt fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-bolt fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Power Inverters</h5>
                             <p>110v and 220v power adapters to charge camera batteries on the go.</p>
                         </div>
@@ -682,7 +682,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-expand fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-expand fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Larger Windows</h5>
                             <p>Large windows for the best possible viewing experience.</p>
                         </div>
@@ -691,7 +691,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-arrow-up fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-arrow-up fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Pop Up Roof</h5>
                             <p>Roofs that pop up for standing views of the wildlife.</p>
                         </div>
@@ -700,7 +700,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-coffee fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-coffee fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>Coffee Box</h5>
                             <p>Snacks, coffee, and tea available at any time during game drives.</p>
                         </div>
@@ -709,7 +709,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-medkit fa-3x mb-4" style="color: #78B438;"></i>
+                            <i class="fa fa-medkit fa-3x mb-4" style="color: #D4A017;"></i>
                             <h5>First Aid Kit</h5>
                             <p>Equipped for emergencies, with guides trained in their use.</p>
                         </div>
@@ -724,12 +724,12 @@
 
 
 
-        <!-- Footer Start -->
+    <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #D4A017; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -900,7 +900,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#4B2E18; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
