--- a/booking.html
+++ b/booking.html
@@ -99,7 +99,7 @@
                                     <div class="d-flex align-items-center mb-3">
                                         <h2 class="mb-0 text-dark fw-bold position-relative d-inline-block" style="font-size: 2.5rem;">
                                             Destinations
-                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -139,7 +139,7 @@
                                     <div class="d-flex align-items-center mb-3">
                                         <h2 class="mb-0 text-dark fw-bold position-relative d-inline-block" style="font-size: 2.5rem;">
                                             Safari Tours
-                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="destination-list d-flex flex-column gap-2">
@@ -177,7 +177,7 @@
                                     <div class="d-flex align-items-center mb-3">
                                         <h2 class="mb-0 text-dark fw-bold position-relative d-inline-block" style="font-size: 2.5rem;">
                                             Experiences
-                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #78B438;"></span>
+                                            <span style="position: absolute; bottom: -5px; left: 0; width: 100%; height: 3px; background-color: #4B2E18;"></span>
                                         </h2>
                                     </div>
                                     <div class="row">
@@ -362,7 +362,7 @@
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
             <h2 class="fw-bold" style="font-size:40px;">
-                <span style="border-left:5px solid #78B438; padding-left:15px;">Awards</span>
+                <span style="border-left:5px solid #4B2E18; padding-left:15px;">Awards</span>
             </h2>
         </div>
 
@@ -533,7 +533,7 @@
                     <form class="newsletter-form">
                         <input type="email" class="form-control mb-2" placeholder="Email">
                         <button class="btn w-100"
-                            style="background:#78B438; color:#fff; font-weight:bold;">SUBSCRIBE</button>
+                            style="background:#4B2E18; color:#fff; font-weight:bold;">SUBSCRIBE</button>
                     </form>
                 </div>
 
