--- a/index.html
+++ b/index.html
@@ -2202,7 +2202,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team_member_male.png" alt="Kilimora Safari">
+                            <img class="img-fluid" src="img/glady-profile1.HEIC" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1"
