--- a/index.html
+++ b/index.html
@@ -2217,7 +2217,7 @@
                             <h5 class="mb-0">Glady Mushi</h5>
                             <small> Director</small>
                             <div class="mt-3">
-                                <a href="about.html#diana-profile" class="team-read-more">Read More &rarr;</a>
+                                <a href="about.html#glady-profile" class="team-read-more">Read More &rarr;</a>
                             </div>
                         </div>
                     </div>
@@ -2225,7 +2225,8 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/pro3.jpg" alt="Kilimora Safari">
+
+                            <img class="img-fluid" src="img/gladyprofile.jpeg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1"
