--- a/index.html
+++ b/index.html
@@ -2238,15 +2238,19 @@
                                     class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Diana</h5>
-                            <small>Director</small>
+                            <h5 class="mb-0">Glady Mushi</h5>
+                            <small> Director</small>
+                            <div class="mt-3">
+                                <a href="about.html#glady-profile" class="team-read-more">Read More &rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team_member_male.png" alt="">
+
+                            <img class="img-fluid" src="img/gladyprofile.jpeg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1"
@@ -2258,8 +2262,11 @@
                                     class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Glady Mushi</h5>
+                            <small> Director</small>
+                            <div class="mt-3">
+                                <a href="about.html#glady-profile" class="team-read-more">Read More &rarr;</a>
+                            </div>
                         </div>
                     </div>
                 </div>
